--- a/css/small.css
+++ b/css/small.css
@@ -69,6 +69,7 @@ th{
 
 .code{
     font-family: "Lucida Console", "Lucida Sans Typewriter", monaco, "Bitstream Vera Sans Mono", monospace;
+    margin: 20px;
     margin-top:15px;
     margin-bottom:15px;
     padding-top:15px;
